Add basic html template, using skeleton and normalize.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello!
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>etymo.io</title>
+  <meta name="description" content="etymo.io is coming soon!">
+  <meta name="author" content="etymo.io">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="skeleton.css">
+  <style>
+  body{font-family:'Open Sans',sans-serif; margin-top:50px;}
+  .header{text-align:center;}
+  </style>
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+<body>
+  <div class="header">
+    <h1>etymo.io is coming soon!</h1>
+    <p>We are developing</p>
+  </div>
+</body>
+</html>
