add some dots :)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <div class="header">
     <h1>etymo.io is coming soon!</h1>
-    <p>We are developing</p>
+    <p>We are developing ...</p>
   </div>
 </body>
 </html>
