Add logo and add link to google group.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
 <body>
   <div class="header">
-    <h1>etymo.io is coming soon!</h1>
+    <img src="etymo_logo.png" style="height:100px;margin:10px auto;">
+    <h1>is coming soon!</h1>
     <p>We are developing ...</p>
+    <p>Click <a href="https://groups.google.com/forum/#!forum/etymo-users/join" target="_blank">here</a> to join our google group and keep updated on our progress.</p>
   </div>
 </body>
 </html>
