Etymo Research page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>etymo.io</title>
-  <meta name="description" content="etymo.io is coming soon!">
+  <title>Etymo Research</title>
+  <meta name="description" content="Etymo Research is coming soon!">
   <meta name="author" content="etymo.io">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#005b80">
-  
+
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="skeleton.css">
@@ -31,10 +31,10 @@
 
 <body>
   <div class="header">
-    <img src="etymo_logo.png" style="height:100px;margin:10px auto;">
-    <h1>is coming soon!</h1>
+    <!-- <img src="etymo_logo.png" style="height:100px;margin:10px auto;"> -->
+    <h1>Etymo Research is coming soon!</h1>
     <p>We are developing ...</p>
-    <p>Click <a href="https://groups.google.com/forum/#!forum/etymo-users/join" target="_blank">here</a> to join our google group and keep updated on our progress.</p>
+    <p>Click <a href="https://chat.etymo.io" target="_blank">here</a> to join our Mattermost chat and keep updated on our progress.</p>
   </div>
 </body>
 </html>
